# anoncreds-rs-wasm

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs
src/data_types/: cred_request.rs  mod.rs
src/ffi/: cred_req.rs  credential.rs  presentation.rs
src/services/: issuer.rs  prover.rs
src/wasm/: error.rs  mod.rs  object.rs
tests/utils/: mock.rs
wrappers/javascript/anoncreds-nodejs/src/: NodeJSAnoncreds.ts
wrappers/javascript/anoncreds-nodejs/src/ffi/: Structure.ts  structures.ts
wrappers/javascript/anoncreds-nodejs/src/ffi/serialize/: primitives.ts
wrappers/javascript/anoncreds-nodejs/test/: bindings.test.ts
wrappers/javascript/anoncreds-shared/src/: types.ts
wrappers/python/anoncreds/: __init__.py  bindings.py  types.py
wrappers/python/demo/: test.py
