[package]
name = "anoncreds"
version = "0.1.0-dev.16"
authors = ["Hyperledger AnonCreds Contributors <anoncreds@lists.hyperledger.org>"]
description = "Verifiable credential issuance and presentation for Hyperledger AnonCreds (https://www.hyperledger.org/projects), which provides a foundation for self-sovereign identity."
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/hyperledger/anoncreds-rs/"
categories = ["authentication", "cryptography"]
keywords = ["hyperledger", "ssi", "verifiable", "credentials"]
rust-version = "1.58"

[lib]
name = "anoncreds"
path = "src/lib.rs"
crate-type = ["staticlib", "rlib", "cdylib"]

[features]
default = ["ffi", "logger", "zeroize"]
ffi = ["ffi-support", "non_wasm"]
logger = ["env_logger"]
vendored = ["openssl", "openssl/vendored"]
wasm = ["ursa/portable_wasm", "zeroize", "wasm-bindgen", "wasm-logger", "console_error_panic_hook", "serde-wasm-bindgen"]
non_wasm = ["ursa/cl_native", "ursa/serde"]

[dependencies]
bs58 = "0.4.0"
env_logger = { version = "0.9.3", optional = true }
ffi-support = { version = "0.4.0", optional = true }
log = "0.4.17"
once_cell = "1.17.1"
rand = "0.8.5"
regex = "1.7.1"
serde = { version = "1.0.155", features = ["derive"] }
bitvec = { version = "1.0.1", features = ["serde"] }
serde_json = { version = "1.0.94", features = ["raw_value"]}
sha2 = "0.10.6"
tempfile = "3.4.0"
thiserror = "1.0.39"
zeroize = { version = "=1.4", optional = true, features = ["zeroize_derive"] }
wasm-bindgen = { version = "0.2.84", optional = true }
wasm-logger = { version = "0.2.0", optional = true }
console_error_panic_hook = { version="0.1.7", optional = true }
serde-wasm-bindgen = { version = "0.4", optional = true}

# We add the openssl dependency here because ursa does not expose a vendored openssl feature
# Since we use "cl_native" as a feature, which uses openssl, we can add a vendored build with 
# the new exposed "vendored" feature
openssl = { version = "0.10.45", optional = true }

[dependencies.ursa]
git = "https://github.com/hyperledger/ursa.git"
rev = "390f004e3e91f1257da4bbcd6bc2d72f67b62c0f"
version = "0.3.7"
default-features = false

[profile.release]
lto = true
codegen-units = 1
